--- a/registro.html
+++ b/registro.html
@@ -7,20 +7,24 @@
   <script defer src="registro.js"></script>
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">LUTIANE</div>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="registro.html">Registro</a></li>
-        <li><a href="#">Carrito</a></li>
-      </ul>
-    </nav>
-  </header>
+ <header>
+        <nav>
+            <div class="logo">LUTIANE</div>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="registro.html">Registro</a></li>
+                <li><a href="carrito.html">Carrito</a></li>
+                 <li>
+                    <a href="carrito.html">
+                        Carrito <span id="contador-carrito">0</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
   <main class="form-container">
     <h1>Crear Cuenta</h1>
