--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="logo">LUTIANE</div>
         <ul>
-            <li><a href ="#">Inicio</a></li>
+            <li><a href ="index.html">Inicio</a></li>
             <li><a href ="#">Productos</a></li>
             <li><a href ="#">Contactos</a></li>
             <li><a href ="#">Nosotros</a></li>
