--- a/contactos.html
+++ b/contactos.html
@@ -12,12 +12,12 @@
         <nav>
             <div class="logo">LUTIANE</div>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="registro.html">Registro</a></li>
-                <li><a href="carrito.html">Carrito</a></li>
+                <li><a href ="productos.html">Productos</a></li>
+                <li><a href ="contactos.html">Contactos</a></li>
+                <li><a href ="nosotros.html">Nosotros</a></li>
+                <li><a href ="login.html">Login</a></li>
+                <li><a href ="registro.html">Registro</a></li>
+                <li><a href ="carrito.html">Carrito</a></li>
                  <li>
                     <a href="carrito.html">
                         Carrito <span id="contador-carrito">0</span>
