Modifique la direccion de la imagen para llamarla en el html

--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero" style="background: url('img/nosotros.jpg') no-repeat center center/cover; height: 80vh;">
+  <section class="hero" style="background: url('imagenes/nosotros.jpg') no-repeat center center/cover; height: 80vh;">
     <div class="hero-text">
       <h1>Conoce Lutiane</h1>
       <p>Moda urbana con estilo propio</p>
