--- a/carrito.html
+++ b/carrito.html
@@ -12,6 +12,7 @@
         <nav>
             <div class="logo">LUTIANE</div>
             <ul>
+                <li><a href ="index.html">Inicio</a></li>
                 <li><a href ="productos.html">Productos</a></li>
                 <li><a href ="contactos.html">Contactos</a></li>
                 <li><a href ="nosotros.html">Nosotros</a></li>
