Añadida funcionalidad completa del carrito y estilos

--- a/carrito.html
+++ b/carrito.html
@@ -12,17 +12,13 @@
         <nav>
             <div class="logo">LUTIANE</div>
             <ul>
-                <li><a href ="index.html">Inicio</a></li>
-                <li><a href ="productos.html">Productos</a></li>
-                <li><a href ="contactos.html">Contactos</a></li>
-                <li><a href ="nosotros.html">Nosotros</a></li>
-                <li><a href ="login.html">Login</a></li>
-                <li><a href ="registro.html">Registro</a></li>
-                <li><a href ="carrito.html">Carrito</a></li>
-                 <li>
-                    <a href="carrito.html">
-                        Carrito <span id="contador-carrito">0</span>
-                    </a>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="registro.html">Registro</a></li>
+                <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a>
                 </li>
             </ul>
         </nav>
@@ -33,7 +29,8 @@
         
         <section class="contenedor-carrito">
             <div id="lista-carrito">
-                </div>
+                <!-- Los productos se cargarán aquí -->
+            </div>
         </section>
 
         <section class="resumen-compra">
@@ -85,6 +82,6 @@
         </div>
     </footer>
     
-    <script src="jss/carrito.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
