--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Registro - Lutiane</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="registro.js"></script>
 </head>
 <body>
   <header>
@@ -17,7 +16,7 @@
             <li><a href ="nosotros.html">Nosotros</a></li>
             <li><a href ="login.html">Login</a></li>
             <li><a href ="registro.html">Registro</a></li>
-            <li><a href ="carrito.html">Carrito</a></li>
+            <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
       </ul>
     </nav>
   </header>
@@ -93,5 +92,6 @@
     <p>© 2025 <strong>Lutiane</strong> - Diseñado con estilo para ti</p>
   </div>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
