--- a/contactos.html
+++ b/contactos.html
@@ -18,12 +18,7 @@
                 <li><a href ="nosotros.html">Nosotros</a></li>
                 <li><a href ="login.html">Login</a></li>
                 <li><a href ="registro.html">Registro</a></li>
-                <li><a href ="carrito.html">Carrito</a></li>
-                 <li>
-                    <a href="carrito.html">
-                        Carrito <span id="contador-carrito">0</span>
-                    </a>
-                </li>
+                <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
             </ul>
         </nav>
     </header>
@@ -96,5 +91,6 @@
             <p>&copy; 2025 <strong>Lutiane</strong> - Diseñado con estilo para ti</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
