--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href ="nosotros.html">Nosotros</a></li>
             <li><a href ="login.html">Login</a></li>
             <li><a href ="registro.html">Registro</a></li>
-            <li><a href ="carrito.html">Carrito</a></li>
+            <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
         </ul>
     </nav>
   </header>
@@ -25,7 +25,7 @@
     <div class="hero-text">
       <h1>Nueva Colección 2025</h1>
       <p>Moda urbana y elegante para todos los estilos</p>
-      <a href="#" class="btn">Ver Productos</a>
+      <a href="productos.html" class="btn">Ver Productos</a>
     </div>
   </section>
   <section class="productos">
@@ -35,13 +35,21 @@
         <img src="imagenes/polera.png" alt="Polera">
         <h3>Polera Oversize</h3>
         <p>$15.000</p>
-        <button>Añadir al carrito</button>
+        <button class="add-to-cart-btn" 
+                data-id="1" 
+                data-nombre="Polera Oversize" 
+                data-precio="15000"
+                data-imagen="imagenes/polera.png">Añadir al carrito</button>
       </div>
       <div class="producto">
         <img src="imagenes/Cargo_Jeans.jpg" alt="Pantalón">
         <h3>Pantalón Cargo</h3>
         <p>$25.000</p>
-        <button>Añadir al carrito</button>
+        <button class="add-to-cart-btn" 
+                data-id="2" 
+                data-nombre="Pantalón Cargo" 
+                data-precio="25000"
+                data-imagen="imagenes/Cargo_Jeans.jpg">Añadir al carrito</button>
       </div>
     </div>
   </section>
