--- a/productos.html
+++ b/productos.html
@@ -18,7 +18,7 @@
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="registro.html">Registro</a></li>
-                <li><a href="carrito.html">Carrito</a></li>
+                <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
             </ul>
         </nav>
     </header>
@@ -95,6 +95,6 @@
         </div>
     </footer>
     
-    <script src="carrito.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
