--- a/productos.html
+++ b/productos.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="registro.html">Registro</a></li>
@@ -26,24 +27,29 @@
     <main class="productos-page">
         <h1>Nuestros Productos</h1>
         <section class="productos-galeria">
+            
             <div class="producto-item">
                 <figure>
                     <img src="imagenes/polera.png" alt="Polera Oversize">
                 </figure>
                 <h3>Polera Oversize</h3>
                 <p class="precio">$15.000</p>
+                <a href="detalle.html?id=1" class="btn btn-detalle">Ver detalle</a>
                 <button class="add-to-cart-btn" 
                     data-id="1" 
                     data-nombre="Polera Oversize" 
                     data-precio="15000"
                     data-imagen="imagenes/polera.png">Añadir al carrito</button>
             </div>
+
+
             <div class="producto-item">
                 <figure>
                     <img src="imagenes/Cargo_Jeans.jpg" alt="Pantalón Cargo">
                 </figure>
                 <h3>Pantalón Cargo</h3>
                 <p class="precio">$25.000</p>
+                <a href="detalle.html?id=2" class="btn btn-detalle">Ver detalle</a>
                 <button class="add-to-cart-btn" 
                     data-id="2" 
                     data-nombre="Pantalón Cargo" 
