--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href ="productos.html">Productos</a></li>
             <li><a href ="contactos.html">Contactos</a></li>
             <li><a href ="nosotros.html">Nosotros</a></li>
+            <li><a href ="blog.html">Blog</a></li>
             <li><a href ="login.html">Login</a></li>
             <li><a href ="registro.html">Registro</a></li>
             <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
