--- a/nosotros.html
+++ b/nosotros.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="productos.html">Productos</a></li>
         <li><a href="contactos.html">Contactos</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="nosotros.html">Nosotros</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="registro.html">Registro</a></li>
