--- a/registro.html
+++ b/registro.html
@@ -14,6 +14,7 @@
             <li><a href ="productos.html">Productos</a></li>
             <li><a href ="contactos.html">Contactos</a></li>
             <li><a href ="nosotros.html">Nosotros</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href ="login.html">Login</a></li>
             <li><a href ="registro.html">Registro</a></li>
             <li><a href="carrito.html">Carrito <span id="contador-carrito">0</span></a></li>
@@ -24,24 +25,34 @@
   <main class="form-container">
     <h1>Crear Cuenta</h1>
     <form id="formRegistro">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" required maxlength="50">
+    <label for="run">Run:</label>
+    <input type="text" id="run" required minlength="7" maxlength="9" placeholder="12345678K">
 
-      <label for="apellido">Apellido:</label>
-      <input type="text" id="apellido" required maxlength="50">
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" required maxlength="50">
 
-      <label for="correo">Correo:</label>
-      <input type="email" id="correo" required maxlength="100">
+    <label for="apellido">Apellido:</label>
+    <input type="text" id="apellido" required maxlength="100">
 
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" required minlength="4" maxlength="10">
+    <label for="correo">Correo:</label>
+    <input type="email" id="correo" required maxlength="100" placeholder="ejemplo@duoc.cl">
 
-      <label for="confirmar">Confirmar Contraseña:</label>
-      <input type="password" id="confirmar" required>
+    <label for="fecha">Fecha de Nacimiento:</label>
+    <input type="date" id="fecha">
 
-      <button type="submit">Registrarse</button>
-    </form>
-    <p id="mensaje"></p>
+    <label for="direccion">Dirección:</label>
+    <input type="text" id="direccion" maxlength="300">
+
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" required minlength="4" maxlength="10">
+
+    <label for="confirmar">Confirmar Contraseña:</label>
+    <input type="password" id="confirmar" required>
+
+    <button type="submit">Registrarse</button>
+  </form> 
+  <p id="mensaje"></p>
+
   </main>
   <footer>
   <div class="footer-container">
