Se agregan direcciones correctas a algunas areas del footer

--- a/contactos.html
+++ b/contactos.html
@@ -52,9 +52,9 @@
                 <p>Av. Independencia #1234, Santiago</p>
                 <p><a href="mailto:contacto@lutiane.cl">contacto@lutiane.cl</a></p>
                 <div class="social">
-                    <a href="#">Instagram</a> | 
-                    <a href="#">TikTok</a> | 
-                    <a href="#">Facebook</a>
+                    <a href="https://www.instagram.com/lutiane.cl">Instagram</a> | 
+                    <a href="https://www.mercadolibre.cl/pagina/lutianespa?fbclid=PAZXh0bgNhZW0CMTEAAae3DlcSOW_6KA7sTU2ApElbRgIqYiFfoLD_Rkp2iSeCbNUJpvEmTlxg1LIVfw_aem_59HsN7U2STVkGkw-Eo_uoQ">Mercado Libre</a> | 
+                    <a href="#">WhatsApp</a>
                 </div>
             </div>
             <div class="footer-section">
