Agrego cambios de la pagina vendedor

--- a/vendedor.html
+++ b/vendedor.html
@@ -20,11 +20,12 @@
 
   <section>
     <h1>Lutiane Tienda</h1>
-    <nav>
-      <button onclick="mostrarSeccion('formulario')">Registrar un pedido</button>
-      <button onclick="mostrarSeccion('pendientes')">Pedidos pendientes</button>
-      <button onclick="mostrarSeccion('enviados')">Pedidos enviados</button>
-    </nav>
+   <nav>
+        <button class="panel-vendedor-btn" onclick="mostrarSeccion('formulario')">Registrar un pedido</button>
+        <button class="panel-vendedor-btn" onclick="mostrarSeccion('pendientes')">Pedidos pendientes</button>
+        <button class="panel-vendedor-btn" onclick="mostrarSeccion('enviados')">Pedidos enviados</button>
+</nav>
+
   </section>
 
   <main>
